Fix steps.